# kicad-templates

./: CMakeLists.txt  README.md
Projects/esp32s3-bms/: esp32s3-bms.kicad_pcb  esp32s3-bms.kicad_pro  esp32s3-bms.kicad_sch  sym-lib-table
Projects/esp32s3-bms/libs/: B2B-PH-K-S.dcm  B2B-PH-K-S.kicad_sym  B2B-PH-K-S.lib  B2B-PH-K-S.mod  B2BPHKS.kicad_mod  BQ24040DSQR.dcm  BQ24040DSQR.kicad_sym  BQ24040DSQR.lib  BQ24040DSQR.mod  ESD7104MUTAG.dcm  ESD7104MUTAG.kicad_sym  ESD7104MUTAG.lib  ESD7104MUTAG.mod  ESD8104MUTAG.kicad_mod  SON40P200X200X80-11N.kicad_mod
Projects/esp32s3-bms/meta/: info.html
